update code for swagger
